Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29210

Incorrect scroll bar in "Issues" view

    XMLWordPrintable

Details

    • 6a9f9358c (11.0)

    Description

      1. Try building a project with a number of syntax errors.
        It should be so many errors that the "Issues" view displays a vertical scrollbar.
      2. Show the "Issues" view.
        It has a horizontal scrollbar, no matter how wide you make Creator's window:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes