Issues pane: Prevent unneeded scroll bar due to rounding errors

Fixes: QTCREATORBUG-29210
Change-Id: Idb4dbbf4697b0ae25cdf8a1731b419b09e2b95da
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>